--- a/style.css
+++ b/style.css
@@ -1,104 +1,48 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
-    color: #333;
-    line-height: 1.6;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f8f9fa;
 }
 
-header {
-    background-color: #4CAF50;
-    color: white;
+.container {
+    width: 100%;
+    max-width: 500px;
+    background:beige;
     padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
     text-align: center;
 }
 
-header h1 {
-    font-size: 2.5rem;
-}
-
-header p {
-    font-size: 1.2rem;
-}
-
-main {
-    padding: 20px;
-}
-
-h2 {
-    margin-top: 20px;
-}
-
-#entries {
-    margin-bottom: 30px;
-}
-
-#entry-list {
-    margin-top: 20px;
-}
-
-.entry {
-    background-color: white;
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-}
-
-.entry h3 {
-    margin-bottom: 10px;
-    font-size: 1.5rem;
-}
-
-.entry p {
-    font-size: 1rem;
-    color: #555;
-}
-
-form {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-}
-
-label {
-    font-size: 1rem;
-    margin-bottom: 5px;
-    display: block;
-}
-
-input[type="text"],input[type="password"],
 textarea {
-    width: 100%;
+    width: 80%;
+    height: 100px;
+    margin: 10px 0;
     padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid lightcyan;
     border-radius: 5px;
 }
 
 button {
-    background-color: #4CAF50;
+    background-color: #952cc9;
     color: white;
     padding: 10px 15px;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #cb9ec7;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    background-color: #333;
-    color: white;
+.entry {
+    background: #f1f1f1;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    text-align: left;
 }
